# kerill-coder

./: MANIFEST.in  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  setup.cfg  trading_bot.py
modules/modules/: __init__.py  risk_management.py  strategy.py
modules/modules/modules/: mt5_interface.py
