[metadata]
name = trading-bot
version = 0.1.0
description = A smart trading bot advisor
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your@email.com
url = https://github.com/yourusername/trading-bot

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    flask
    flask-jwt-extended
    tensorflow
    pandas
    numpy
    scikit-learn
    MetaTrader5
    redis
    pyyaml
    celery
    python-binance
    joblib

[options.packages.find]
where = trading_bot

[options.entry_points]
console_scripts =
    trading-bot = trading_bot.bot:main
